# jelastic-client

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  run_pytest.sh  setup.py  tox.ini
.teamcity/: pom.xml  settings.kts
.teamcity/integrationConfig/: Integration.kt  ReleaseToPypi.kt  buildPythonPackage.kt  publishJelasticVersion.kt  publishPythonPackage.kt  publishPythonPackageToPypi.kt  toxPythonPackage.kt
.teamcity/patches/buildTypes/: Integration.kts  ReleaseToPypi.kts
.teamcity/patches/projects/: _Self.kts
.teamcity/scripts/: publish_commit_short_sha.sh
.teamcity/utils/: publishCommitShortSha.kt  scriptUtils.kt
jelastic_client/: __init__.py  account_client.py  control_client.py  env_info.py  env_node.py  env_settings.py  factory.py  file_client.py  greet.py  jps_client.py  manifest_data.py  node.py  node_settings.py  user_info.py
jelastic_client/core/: __init__.py  api_client.py  base_client.py  exceptions.py  settings.py
test/: conftest.py  random_helpers.py  test_account_client.py  test_control_client.py  test_env_info.py  test_file_client.py  test_jps_client.py  test_manifest_data.py
test/data/: invalid_manifest.jps  manifest_with_settings.jps  valid_manifest.jps  valid_update_manifest.jps
test/docker/alpine-with-file/: Dockerfile  file.txt
test/utils/: __init__.py
test_utils/: manifest_data.py  random_helpers.py
