[tool.poetry]
name = "jelastic-client"
version = "1.3.28"
description = "A client library for Jelastic"
authors = ["softozor <softozor@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "jelastic_client"}]

[tool.poetry.dependencies]
python = "^3.8"
httpx = {version = ">=0.18", extras = ["http2"]}
simplejson = "^3.17.6"
requests = "2.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-xdist = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"